--- a/src/assets/scss/bm.scss
+++ b/src/assets/scss/bm.scss
@@ -1,8 +1,11 @@
 @import 'theme/vars.scss';
-@import 'theme/font.scss';
 
 @import 'bourbon';
 
 @import 'bootstrap';
 
 @import 'font-awesome';
+
+@import 'theme/font.scss';
+@import 'theme/nav.scss';
+
