--- a/src/assets/scss/theme/_vars.scss
+++ b/src/assets/scss/theme/_vars.scss
@@ -3,3 +3,13 @@ $icon-font-path: "../fonts/" !default;
 
 // Bootstrap Mobile Project font
 $bm-icon-font-name: "bmfont";
+
+$white: #fff !default;
+
+$headerHeight: 50px !default;
+
+$red: #f34541 !default;
+
+$contrast: $red !default;
+
+$headerBackground: $contrast !default;
